--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -48,7 +48,17 @@ jobs:
             tests/testq17.sh \
             tests/testq18.sh \
             tests/testq19.sh \
-            tests/testq20.sh; do
+            tests/testq20.sh \
+            tests/testq21.sh \
+            tests/testq22.sh \
+            tests/testq23.sh \
+            tests/testq24.sh \
+            tests/testq25.sh \
+            tests/testq26.sh \
+            tests/testq27.sh \
+            tests/testq28.sh \
+            tests/testq29.sh \
+            tests/testq30.sh; do
               echo "Running $t ..."
               if ! $t; then
                 failed=1   # record failure but continue
