--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -58,7 +58,8 @@ jobs:
             tests/testq27.sh \
             tests/testq28.sh \
             tests/testq29.sh \
-            tests/testq30.sh; do
+            tests/testq30.sh \
+            tests/test_pdf.sh;  do
               echo "Running $t ..."
               if ! $t; then
                 failed=1   # record failure but continue
